# cpuminer

./: .gitignore  .travis.yml  01-cgminer.rules  A1-board-selector-CCD.c  A1-board-selector-CCR.c  A1-board-selector.h  A1-common.h  A1-desk-board-selector-tca9535.c  A1-desk-board-selector.c  A1-trimpot-mcp4x.c  A1-trimpot-mcp4x.h  API-README  API.java  ASIC-README  AUTHORS  Makefile.am  NEWS  README  api-btm.c  api-example.c  api.c  autogen.sh  bench_block.h  bf16-bitfury16.c  bf16-bitfury16.h  bf16-brd-control.c  bf16-brd-control.h  bf16-communication.c  bf16-communication.h  bf16-ctrldevice.c  bf16-ctrldevice.h  bf16-device.h  bf16-gpiodevice.c  bf16-gpiodevice.h  bf16-mspcontrol.c  bf16-mspcontrol.h  bf16-spidevice.c  bf16-spidevice.h  bf16-uartdevice.c  bf16-uartdevice.h  (+109 more)
Unicode/6770/: 杰
bitstreams/: README
ccan/opt/: helpers.c  opt.c  opt.h  parse.c
code/: driver-minion.c
compat/: Makefile.am
compat/jansson-2.5/: configure.ac
compat/jansson-2.6/: configure.ac
compat/jansson-2.6/src/: dump.c  jansson.h  jansson_private.h  lookup3.h  memory.c  strbuffer.c  strconv.c
compat/jansson-2.9/src/: lookup3.h
compat/libusb-1.0/: Makefile.am  configure.ac
compat/libusb-1.0/libusb/: core.c  io.c
compat/libusb-1.0/libusb/os/: linux_usbfs.c  windows_usb.c
debian/: ChangeLog  ChangeLog.1  bitcoin-cpuminer.default  bitcoin-cpuminer.init  bitcoin-cpuminer.postrm  bitcoin-cpuminer.preinst  changelog  control  copyright  docs  examples  minerd.1  rules  watch
m4/: pkg.m4
x86_64/: sha256_xmm_amd64.asm
